--- a/privacy_policy_en.html
+++ b/privacy_policy_en.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+    </style>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+    <p>Last Updated: November 2024</p>
 
+    <h2>Introduction</h2>
+    <p>This is a local-only asset tracking application. We highly value your privacy and want you to understand how we protect your personal information.</p>
+
+    <h2>Data Collection and Use</h2>
+    <p>This application:</p>
+    <ul>
+        <li>Does not collect any personally identifiable information</li>
+        <li>Does not require network access</li>
+        <li>Does not upload your data to any servers</li>
+        <li>All data is stored locally on your device only</li>
+    </ul>
+
+    <h2>Data Storage</h2>
+    <p>All information you enter in the application (including:</p>
+    <ul>
+        <li>Asset amounts</li>
+        <li>Cash records</li>
+        <li>Exchange rate settings</li>
+        <li>Personal notes</li>
+    </ul>
+    <p>is stored only in your device's local storage using iOS's UserDefaults system for secure storage.</p>
+
+    <h2>Data Deletion</h2>
+    <p>You can delete your data at any time by:</p>
+    <ul>
+        <li>Deleting individual records directly in the application</li>
+        <li>Removing the application will completely clear all related data</li>
+    </ul>
+
+    <h2>Third-Party Services</h2>
+    <p>This application does not use any third-party services and does not share your data with any third parties.</p>
+
+    <h2>Children's Privacy</h2>
+    <p>This application is not targeted at children under 13, and we do not intentionally collect personal data from children.</p>
+
+    <h2>Privacy Policy Updates</h2>
+    <p>If we make changes to this privacy policy, we will notify you when the application is updated.</p>
+
+    <h2>Contact Information</h2>
+    <p>If you have any questions about this privacy policy, please contact:</p>
+    <p>Email: owen1221111@gmail.com</p>
+
+    <h2>Consent</h2>
+    <p>By using this application, you agree to this privacy policy. If you do not agree with this policy, please do not use this application.</p>
+</body>
+</html> 
