--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>隱私政策</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+    </style>
+</head>
+<body>
+    <h1>隱私政策</h1>
+    <p>最後更新日期：2024年11月</p>
 
+    <h2>簡介</h2>
+    <p>這是一款純本地的資產追蹤應用程式。我們高度重視您的隱私，並希望您了解我們如何保護您的個人資料。</p>
+
+    <h2>資料收集與使用</h2>
+    <p>本應用程式：</p>
+    <ul>
+        <li>不會收集任何個人識別資訊</li>
+        <li>不會要求網路存取權限</li>
+        <li>不會將您的資料上傳至任何伺服器</li>
+        <li>所有資料僅儲存在您的設備本地</li>
+    </ul>
+
+    <h2>資料儲存</h2>
+    <p>您在應用程式中輸入的所有資訊（包括：</p>
+    <ul>
+        <li>資產金額</li>
+        <li>現金記錄</li>
+        <li>匯率設定</li>
+        <li>個人備註</li>
+    </ul>
+    <p>都只會儲存在您設備的本地儲存空間中，使用iOS系統提供的UserDefaults進行安全儲存。</p>
+
+    <h2>資料刪除</h2>
+    <p>您可以隨時通過以下方式刪除您的資料：</p>
+    <ul>
+        <li>在應用程式中直接刪除個別記錄</li>
+        <li>移除應用程式將會完全清除所有相關資料</li>
+    </ul>
+
+    <h2>第三方服務</h2>
+    <p>本應用程式不使用任何第三方服務，也不會與任何第三方共享您的資料。</p>
+
+    <h2>兒童隱私</h2>
+    <p>本應用程式不針對13歲以下兒童，我們不會特意收集兒童的個人資料。</p>
+
+    <h2>隱私政策更新</h2>
+    <p>如果我們對隱私政策進行更改，我們會在應用程式更新時通知您。</p>
+
+    <h2>聯絡方式</h2>
+    <p>如果您對本隱私政策有任何疑問，請聯絡：</p>
+    <p>Email：owen1221111@gmail.com</p>
+
+    <h2>同意聲明</h2>
+    <p>使用本應用程式即表示您同意本隱私政策的內容。如果您不同意本政策，請不要使用本應用程式。</p>
+</body>
+</html> 
