--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -55,7 +55,17 @@
     </ul>
 
     <h2>第三方服務</h2>
-    <p>本應用程式不使用任何第三方服務，也不會與任何第三方共享您的資料。</p>
+    <p>第三方服務：<p>
+       <p>- 本應用程式使用 Yahoo Finance API 提供即時匯率資訊<p>
+       <p>- 在查詢匯率時，會向 Yahoo Finance 發送請求<p>
+       <p>- 我們不會將您的個人資料傳送給 Yahoo Finance<p>
+       <p>- 請參考 Yahoo Finance 的服務條款和隱私政策了解更多資訊：<p>
+       <p>https://legal.yahoo.com/us/en/yahoo/privacy/index.html<p>
+
+       <p>資料使用：<p>
+       <p>- Yahoo Finance API 僅用於獲取即時匯率資訊<p>
+       <p>- 不會收集或分享您的個人資料<p>
+       <p>- 所有記帳資料都只儲存在您的設備本地</p>
 
     <h2>兒童隱私</h2>
     <p>本應用程式不針對13歲以下兒童，我們不會特意收集兒童的個人資料。</p>
