--- a/privacy_policy_en.html
+++ b/privacy_policy_en.html
@@ -55,7 +55,25 @@
     </ul>
 
     <h2>Third-Party Services</h2>
-    <p>This application does not use any third-party services and does not share your data with any third parties.</p>
+    <p>Third-Party Services:
+    
+    - This application uses Yahoo Finance API to provide real-time exchange rate information
+
+    - Requests are sent to Yahoo Finance when querying exchange rates
+
+    - We do not share any of your personal information with Yahoo Finance
+
+    - Please refer to Yahoo Finance's Terms of Service and Privacy Policy for more information:
+
+    https://legal.yahoo.com/us/en/yahoo/privacy/index.html
+
+    Data Usage:
+
+    - Yahoo Finance API is only used to obtain real-time exchange rate information
+
+    - We do not collect or share your personal information
+
+    - All accounting records are stored locally on your device only</p>
 
     <h2>Children's Privacy</h2>
     <p>This application is not targeted at children under 13, and we do not intentionally collect personal data from children.</p>
